--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "moment": "^2.21.0",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
