--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
           "assets": "./src/assets",
           "containers": "./src/containers",
           "components": "./src/components",
-          "constants": "./src/constants"
+          "constants": "./src/constants",
+          "utils": "./src/utils"
         }
       }
     ]
