--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "aws-sdk": "^2.192.0",
     "babel-preset-stage-0": "^6.24.1",
+    "compass": "^0.1.1",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "moment": "^2.21.0",
